--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
 PDF
-data
+data/
+Backup/
 passwd
+.Rproj.user/
+*.pdf
+*.html
+*_cache/
+*.md
+*~
+*.rda
+slide2-figure/
+slides-files/
+/cache/
+.Rhistory
+
 .Rproj.user
